--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
         "sass": "^1.56.1",
         "vite": "^4.0.0",
         "vue": "^3.2.37"
+    },
+    "dependencies": {
+        "@mdi/font": "^7.2.96",
+        "vue-router": "^4.1.6",
+        "vuetify": "^3.1.13",
+        "vuex": "^4.1.0"
     }
 }
