--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
         "@vitejs/plugin-vue": "^4.0.0",
-        "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^0.7.2",
         "sass": "^1.56.1",
@@ -16,6 +15,8 @@
     },
     "dependencies": {
         "@mdi/font": "^7.2.96",
+        "axios": "^1.3.5",
+        "vform": "^2.1.2",
         "vue-i18n": "^9.2.2",
         "vue-router": "^4.1.6",
         "vuetify": "^3.1.13",
